@@ -1,6 +1,8 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
+    xmlns:theme="http://namespaces.zope.org/plonetheme.onegov"
     i18n_domain="ftw.tabbedview">
 
     <include package="plone.app.contentmenu" />
@@ -8,6 +10,11 @@
     <browser:resourceDirectory
         name="ftw.tabbedview-resources"
         directory="resources" />
+
+    <configure zcml:condition="installed plonetheme.onegov">
+        <include package="plonetheme.onegov" />
+        <theme:add_scss path="tabbedview.scss" />
+    </configure>
 
     <browser:page
         for="*"
