@@ -1,0 +1,76 @@
+/* @group tabbedview */
+
+div.overview-left-column,
+div.overview-right-column { @include width8(); }
+
+#tabbedview-body {
+  margin-top: 1em;
+  overflow: hidden;
+}
+#tabbedview-searchbox {
+  padding: 0.3em;
+  position: absolute;
+  right: 0;
+  bottom: 0.25em;
+  width: 10em;
+}
+#tabbedview-header {
+  position: relative;
+}
+#tabbedview-header .tabbedview-tabs {
+  margin-right: 12em;
+  ul.formTabs {
+    padding-right: 12em;
+  }
+}
+#tabbedview-header.disabledSearchBox .tabbedview-tabs {
+  margin-right: 0;
+  ul.formTabs {
+    padding-right: 0;
+  }
+}
+#tabbedview-searchbox[disabled] {
+  display: none;
+}
+#overview_overview .box ul {
+  @include ul($style: 'plain');
+}
+
+ul.tabbedview-action-list {
+  @include ul($style:'plain');
+  margin-top: 0.5em;
+  li { float: left; }
+}
+
+div.x-grid3-col-getContentType .spriteIcon {
+  margin-left: 0.25em;
+}
+
+#content #tabbedview-body {
+  h2 {
+    margin: 0.75em 0 0.25em 0;
+  }
+  .sublisting li {
+    margin-bottom: 0.5em;
+  }
+}
+
+/* @end */
+
+/* @group tabbedview preview */
+
+.previewContainer {
+  .previewTitle {
+  @include borderradius(0);
+  }
+  .colorboxLink {
+    @include boxshadow(0.25em 0.25em 0.5em $lightgray2);
+    &:hover {
+      @include boxshadow(0.25em 0.25em 0.5em $lightgray3);
+      border-color: $link-color-hover;
+      color: $link-color;
+    }
+  }
+}
+
+/* @end */
